// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown Preview renderer HTML rendering should render HTML 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Paragraph with <em>inline</em> element</p>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Code should render code 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Use the <code>printf()</code> function.</p>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Code should render code 2 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p><code>There is a literal backtick (\`) here.</code></p>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering General should render markdown 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>H1</h1>
<p>Text with <strong>bold</strong> &#x26; <em>em</em> elements</p>
<h2>H2</h2>
<ul>
<li>ul item 1</li>
<li>ul item 2</li>
</ul>
<h3>H3</h3>
<ol>
<li>ol item 1</li>
<li>ol item 2</li>
<li>ol item 3</li>
</ol>
<h4>H4</h4>
<p><a href=\\"http://google.com\\">link title</a></p>
<h5>H5</h5>
<p>![alt text](https://pbs.twimg.com/profile_images/678903331176214528/TQTdqGwD.jpg)</p>
<h6>H6</h6>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering HTML should render HTML as is when using Markdown 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>Title</h1>
<form action=\\"test\\">
  <label for=\\"input\\">
    <input type=\\"checkbox\\" checked=\\"checked\\" id=\\"input\\"/> My label
  </label>
  <dl class=\\"test-class another-class\\" style=\\"width: 100%\\">
      <dt data-attr=\\"test\\">Test HTML content</dt>
      <dt>Testing HTML in Markdown</dt>
  </dl>
</form>
<h1 style=\\"display: block; border: 10px solid #f00; width: 100%\\">Test</h1>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Headings should render Heading 1 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>Title</h1>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Headings should render Heading 2 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h2>Title</h2>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Headings should render Heading 3 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h3>Title</h3>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Headings should render Heading 4 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h4>Title</h4>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Headings should render Heading 5 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h5>Title</h5>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Headings should render Heading 6 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h6>Title</h6>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Links should render links 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>I get 10 times more traffic from <a href=\\"http://google.com/\\" title=\\"Google\\">Google</a> than from <a href=\\"http://search.yahoo.com/\\" title=\\"Yahoo Search\\">Yahoo</a> or <a href=\\"http://search.msn.com/\\" title=\\"MSN Search\\">MSN</a>.</p>",
    }
  }
/>
`;

exports[`Markdown Preview renderer Markdown rendering Lists should render lists 1`] = `
.emotion-0 {
  margin: 15px 2px;
}

<div
  className="emotion-0 emotion-1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<ol>
<li>ol item 1</li>
<li>
<p>ol item 2</p>
<ul>
<li>Sublist 1</li>
<li>Sublist 2</li>
<li>
<p>Sublist 3</p>
<ol>
<li>Sub-Sublist 1</li>
<li>Sub-Sublist 2</li>
<li>Sub-Sublist 3</li>
</ol>
</li>
</ul>
</li>
<li>ol item 3</li>
</ol>",
    }
  }
/>
`;
